<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:gravity="center_horizontal|bottom"
        android:padding="10dp"
        android:text="@string/enterpriority"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rbPriority"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/p1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/p2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/p3" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/p4" />
    </RadioGroup>


    <Button
        android:id="@+id/bEmergency"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/emergency" 
        android:layout_marginBottom="25dp"/>

    <Button
        android:id="@+id/bLogout"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/logout" />

</LinearLayout>
</ScrollView>