<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Splash" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:gravity="center_horizontal|bottom"
            android:padding="10dp"
            android:text="@string/enterusername"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@android:color/background_dark" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:gravity="center_horizontal|bottom"
            android:padding="10dp"
            android:paddingTop="30dp"
            android:text="@string/enterpassword"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text=""
            android:visibility="invisible" />

        <Button
            android:id="@+id/bLogin"
            android:layout_width="284dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/bLogin"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>